--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,26 @@
     "#     adj_matrix_t = list(map(list, zip(*adj_matrix)))\n",
     "#     sources = [any(row) for row in adj_matrix_t]\n",
     "#     sources = [i for i, v in enumerate(sources) if not v]\n",
-    "    return adj_matrix"
+    "    return adj_matrix\n",
+    "\n",
+    "def write_txt(filename, Matrix):\n",
+    "#     Matrix = read_txt('test.csv')\n",
+    "    with open(filename, 'w', newline='') as csvfile:\n",
+    "        spamwriter = csv.writer(csvfile, delimiter=',',\n",
+    "                                quotechar='|', quoting=csv.QUOTE_MINIMAL)\n",
+    "        [spamwriter.writerow(row) for row in Matrix]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +148,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def test_linear():\n",
+    "with open('testcases/linear/allComb.csv', 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    allComb = list(reader)\n",
+    "\n",
+    "for iRow in [0]:\n",
+    "    adj_matA = read_txt(filename='testcases/linear/adjm_A_' + str(iRow+1) + '.csv')\n",
+    "    adj_matB = read_txt(filename='testcases/linear/adjm_B_' + str(iRow+1) + '.csv')\n",
+    "    nSize   = int(allComb[iRow][0])\n",
+    "    nSource = int(allComb[iRow][1])\n",
+    "    nSink   = int(allComb[iRow][2])\n",
+    "    pAddEdge= float(allComb[iRow][3])\n",
+    "    nTrauma = int(allComb[iRow][4])\n",
+    "    #TODO: trauma size\n",
+    "    #TODO: flow value?\n",
+    "    #TODO: what if nSource != nSink\n",
+    "    \n",
+    "    costBefore   = process_graph_LPSolver(adj_matrix=adj_matA, \n",
+    "                                          cost_function=cost_function, \n",
+    "                                          flow_val=nSource, \n",
+    "                                          sources= list(range(0, nSource)),\n",
+    "                                          sinks = list(range(nSize-nSink, nSize)))\n",
+    "    costAfter   = process_graph_LPSolver(adj_matrix=adj_matB, \n",
+    "                                          cost_function=cost_function, \n",
+    "                                          flow_val=nSource, \n",
+    "                                          sources= list(range(0, nSource)),\n",
+    "                                          sinks = list(range(nSize-nSink, nSize)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "200\n",
+      "1\n",
+      "1\n",
+      "0.5\n",
+      "1\n",
+      "[0]\n",
+      "[199]\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(0,10,1)))\n",
+    "print(nSize)\n",
+    "print(nSource)\n",
+    "print(nSink)\n",
+    "print(pAddEdge)\n",
+    "print(nTrauma)\n",
+    "print(list(range(0, nSource)))\n",
+    "print(list(range(nSize-nSink, nSize)))\n",
+    "print(costBefore)\n",
+    "print(costAfter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
