created test_linear for linear cost function

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,13 @@
     "    with open(filename, 'w', newline='') as csvfile:\n",
     "        spamwriter = csv.writer(csvfile, delimiter=',',\n",
     "                                quotechar='|', quoting=csv.QUOTE_MINIMAL)\n",
-    "        [spamwriter.writerow(row) for row in Matrix]"
+    "        [spamwriter.writerow(row) for row in Matrix]\n",
+    "\n",
+    "def nrow(Matrix):\n",
+    "    return(len(Matrix))\n",
+    "\n",
+    "def ncol(Matrix):\n",
+    "    return(len(Matrix[0]))"
    ]
   },
   {
@@ -148,42 +154,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def test_linear():\n",
-    "with open('testcases/linear/allComb.csv', 'r') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    allComb = list(reader)\n",
+    "def test_linear():\n",
+    "    with open('testcases/linear/allComb.csv', 'r') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        allComb = list(reader)\n",
+    "    for iRow in [0]:\n",
+    "        adj_matA = read_txt(filename='testcases/linear/adjm_A_' + str(iRow+1) + '.csv')\n",
+    "        adj_matB = read_txt(filename='testcases/linear/adjm_B_' + str(iRow+1) + '.csv')\n",
+    "        nSize   = int(allComb[iRow][0])\n",
+    "        nSource = int(allComb[iRow][1])\n",
+    "        nSink   = int(allComb[iRow][2])\n",
+    "        pAddEdge= float(allComb[iRow][3])\n",
+    "        nTrauma = int(allComb[iRow][4])\n",
+    "        #TODO: trauma size\n",
+    "        #TODO: flow value?\n",
+    "        #TODO: what if nSource != nSink\n",
     "\n",
-    "for iRow in [0]:\n",
-    "    adj_matA = read_txt(filename='testcases/linear/adjm_A_' + str(iRow+1) + '.csv')\n",
-    "    adj_matB = read_txt(filename='testcases/linear/adjm_B_' + str(iRow+1) + '.csv')\n",
-    "    nSize   = int(allComb[iRow][0])\n",
-    "    nSource = int(allComb[iRow][1])\n",
-    "    nSink   = int(allComb[iRow][2])\n",
-    "    pAddEdge= float(allComb[iRow][3])\n",
-    "    nTrauma = int(allComb[iRow][4])\n",
-    "    #TODO: trauma size\n",
-    "    #TODO: flow value?\n",
-    "    #TODO: what if nSource != nSink\n",
-    "    \n",
-    "    costBefore   = process_graph_LPSolver(adj_matrix=adj_matA, \n",
-    "                                          cost_function=cost_function, \n",
-    "                                          flow_val=nSource, \n",
-    "                                          sources= list(range(0, nSource)),\n",
-    "                                          sinks = list(range(nSize-nSink, nSize)))\n",
-    "    costAfter   = process_graph_LPSolver(adj_matrix=adj_matB, \n",
-    "                                          cost_function=cost_function, \n",
-    "                                          flow_val=nSource, \n",
-    "                                          sources= list(range(0, nSource)),\n",
-    "                                          sinks = list(range(nSize-nSink, nSize)))\n"
+    "        costBefore   = process_graph_LPSolver(adj_matrix=adj_matA, \n",
+    "                                              cost_function=cost_function, \n",
+    "                                              flow_val=nSource, \n",
+    "                                              sources= list(range(0, nSource)),\n",
+    "                                              sinks = list(range(nSize-nSink, nSize)))\n",
+    "        costAfter   = process_graph_LPSolver(adj_matrix=adj_matB, \n",
+    "                                              cost_function=cost_function, \n",
+    "                                              flow_val=nSource, \n",
+    "                                              sources= list(range(0, nSource)),\n",
+    "                                              sinks = list(range(nSize-nSink, nSize)))\n",
+    "        allComb[iRow].append(costBefore);\n",
+    "        allComb[iRow].append(costAfter);\n",
+    "write_txt('testcases/linear/allComb_out.csv', allComb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +207,22 @@
       "[0]\n",
       "[199]\n",
       "0.0\n",
-      "0.0\n"
+      "0.0\n",
+      "[0, 1, 2, 3]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '0.5'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-3fb2d4025459>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mread_txt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'testcases/linear/allComb_out.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-50-049221a2e34b>\u001b[0m in \u001b[0;36mread_txt\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0madj_matrix\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;31m#     sinks = [any(row) for row in adj_matrix]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#     sinks = [i for i, v in enumerate(sinks) if not v]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-50-049221a2e34b>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0madj_matrix\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;31m#     sinks = [any(row) for row in adj_matrix]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#     sinks = [i for i, v in enumerate(sinks) if not v]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-50-049221a2e34b>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0madj_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0madj_matrix\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;31m#     sinks = [any(row) for row in adj_matrix]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#     sinks = [i for i, v in enumerate(sinks) if not v]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '0.5'"
      ]
     }
    ],
@@ -213,7 +236,10 @@
     "print(list(range(0, nSource)))\n",
     "print(list(range(nSize-nSink, nSize)))\n",
     "print(costBefore)\n",
-    "print(costAfter)"
+    "print(costAfter)\n",
+    "l = [0, 1, 2]\n",
+    "l.append(3)\n",
+    "print(l)"
    ]
   },
   {
