testing on linear cost function

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pulp\n",
     "import csv\n",
     "import time\n",
+    "import matplotlib.pyplot as plt\n",
     "from pulp import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +170,8 @@
     "    with open('testcases/linear/allComb.csv', 'r') as f:\n",
     "        reader = csv.reader(f)\n",
     "        allComb = list(reader)\n",
-    "    for iRow in [0]:\n",
+    "    #     for iRow in list(range(0, nrow(allComb))):\n",
+    "    for iRow in list(range(0, 3)):\n",
     "        adj_matA = read_txt(filename='testcases/linear/adjm_A_' + str(iRow+1) + '.csv')\n",
     "        adj_matB = read_txt(filename='testcases/linear/adjm_B_' + str(iRow+1) + '.csv')\n",
     "        nSize   = int(allComb[iRow][0])\n",
@@ -191,27 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "200\n",
-      "1\n",
-      "1\n",
-      "0.5\n",
-      "1\n",
-      "[0]\n",
-      "[199]\n",
-      "0.0\n",
-      "0.0\n",
-      "['200', '1', '1', '0.5', '1', 0.0, 0.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(list(range(0,10,1)))\n",
     "# print(nSize)\n",
@@ -228,48 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'''\n",
-    "Main Input to the program\n",
-    "adj_matrix - n*n matrix represented as a list of lists in python as shown below, 1 represents an edge from i->j\n",
-    "sources - list of vertices that are sources\n",
-    "sinks - list of vertices that are sinks\n",
-    "flow_val - Value of flow that we want to reinstate\n",
-    "\n",
-    "Example\n",
-    "\n",
-    "adj_matrix = [[0,1,0,0],[0,0,1,1],[0,0,0,0],[0,0,1,0]]\n",
-    "sources = [0]\n",
-    "sinks = [2]\n",
-    "flow_val = 2\n",
-    "'''\n",
-    "def main():\n",
-    "    # adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    # [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
-    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
-    "    adj_matrix = read_txt('Adj_Matrix0.txt')\n",
-    "    sources = [0,1,2]\n",
-    "    sinks = [9,10,11]\n",
-    "    flow_val = 3\n",
-    "    cost = process_graph_LPSolver(adj_matrix, sources, sinks, flow_val, cost_function)\n",
-    "    print(cost)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,17 +288,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Main Input to the program\n",
+    "adj_matrix - n*n matrix represented as a list of lists in python as shown below, 1 represents an edge from i->j\n",
+    "sources - list of vertices that are sources\n",
+    "sinks - list of vertices that are sinks\n",
+    "flow_val - Value of flow that we want to reinstate\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "adj_matrix = [[0,1,0,0],[0,0,1,1],[0,0,0,0],[0,0,1,0]]\n",
+    "sources = [0]\n",
+    "sinks = [2]\n",
+    "flow_val = 2\n",
+    "'''\n",
+    "def main():\n",
+    "    # adj_matrix = [[0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    # [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], \n",
+    "    # [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+    "    '''test for process_graph_LPSolver'''\n",
+    "    #     adj_matrix = read_txt('Adj_Matrix0.txt')\n",
+    "    #     sources = [0,1,2]\n",
+    "    #     sinks = [9,10,11]\n",
+    "    #     flow_val = 3\n",
+    "    #     cost = process_graph_LPSolver(adj_matrix, sources, sinks, flow_val, cost_function)\n",
+    "    #     print(cost)\n",
+    "    '''test for linear cost function'''\n",
+    "    test_linear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "main()"
    ]
