--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pulp\n",
@@ -16,14 +18,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -64,14 +70,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -142,8 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -162,8 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def test_linear():\n",
@@ -200,8 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print(list(range(0,10,1)))\n",
@@ -220,14 +236,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -245,6 +265,17 @@
     "    transition_matrix,edge_capacity_factors,edge_flows,vertex_dict = preprocess_graph(adj_matrix,sources,sinks)\n",
     "    source = 0 #super source\n",
     "    sink = len(transition_matrix)-1 #super sink\n",
+    "    CAP_UB = flow_val * len(adj_matrix)\n",
+    "    cap_dict = {}\n",
+    "    for i in range(len(transition_matrix[source])):\n",
+    "        if(transition_matrix[0][i] == 1):\n",
+    "            cf = 'x_0'+'_'+str(i)\n",
+    "            cap_dict[cf] = len(vertex_dict[i]['o'])\n",
+    "\n",
+    "    for i in range(len(sinks)):\n",
+    "        new_sink_idx = sinks[i]+1\n",
+    "        cf = 'x_'+str(new_sink_idx)+'_'+str(sink)\n",
+    "        cap_dict[cf] = len(vertex_dict[new_sink_idx]['i'])\n",
     "    \n",
     "    '''\n",
     "    LP Problem formulation\n",
@@ -272,7 +303,10 @@
     "\n",
     "    #Capacity constraints\n",
     "    for cap, flow in zip(edge_capacity_factors, edge_flows):\n",
-    "        lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]\n",
+    "        cap_multiplier = 1\n",
+    "        if(cap in cap_dict):\n",
+    "            cap_multiplier = CAP_UB\n",
+    "        lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]*cap_multiplier\n",
     "    \n",
     "    #Solve LP_problem\n",
     "    lp_problem.solve()\n",
@@ -289,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -332,8 +368,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "adj_matrix = [[0,1,0,0],[0,0,1,1],[0,0,0,0],[0,0,1,0]]\n",
+    "sources = [0]\n",
+    "sinks = [2]\n",
+    "flow_val = 2\n",
+    "cost = process_graph_LPSolver(adj_matrix, sources, sinks, flow_val, cost_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "main()"
@@ -356,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
